--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"scripts": {
 		"start": "node server.js",
 		"dev": "concurrently \"nodemon server.js --ignore 'client/*'\" \"npm run client\"",
+		"start:dev": "concurrently \"nodemon server.js --ignore 'client/*'\" \"npm run client\"",
 		"client": "cd client && npm run start",
 		"install": "cd client && npm install",
 		"build": "cd client && npm run build",
